// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contextual Menu  renders instance but not visible 1`] = `
<div>
  <span
    className="p-contextual-menu--left"
  >
    <span
      aria-hidden={true}
      aria-label="submenu"
      className="p-contextual-menu__dropdown"
    >
      Test content
    </span>
  </span>
</div>
`;

exports[`Contextual Menu  renders visible instance 1`] = `
<div>
  <span
    className="p-contextual-menu--left"
  >
    <span
      aria-hidden={false}
      aria-label="submenu"
      className="p-contextual-menu__dropdown"
    >
      Test content
    </span>
  </span>
</div>
`;
